# floorplan

./: .gitignore  README.md  README_overall.md  _extractFlooplan.py  correctOrientation.py  directions_classifier.keras  extractFp.py  keyplates_classifier.keras  processFloorplan.py  pyproject.toml  run.sh
CNN_model/: README.md  create_folders.py  custom_CNN.py  data_prep.py  main.py
CRAFT/: README.md  key_plates_analysis.py  merge_conts.py  requirements.txt  room_floor_area_ocr.py  rotation_exp.py  smth.py  test.py
Seneca_Phase1/: Contour_heuristic.py  extraction_from_floorplan.ipynb  extraction_from_floorplan.py  north_indicator_extraction_colab.ipynb  sobel_edge_detection.py
Seneca_Phase3/: .gitignore  key_plates_analysis.py  merge_conts.py  requirements.txt  test.py  test_net.py
_reference/: _extractFlooplan.py  correctOrientation.py  processFloorplan.py
config/: config.ini  config2.ini
direction_classification/: classify_direction.py  get_direction.py  requirements.txt
direction_coords/: pdf_floor_plan_1_1.txt  pdf_floor_plan_42_1.txt  pdf_floor_plan_42_4.txt
direction_detection/: get_direction.py
doc/: coding.md  folder.md  model_overview.drawio
floorplan_classifiction/: README.md  class_names.txt  convert_pdf_to_jpg.py  data_preparation.py  delete_all.py  main.py  make_dataset.py  other_prediction.py  prediction.py  requirements.txt  sample.py
room_floor_area_classification/: main.py
room_floor_area_ocr/: README.md  main.py
src/: main.py
tests/: test_env.py
unit_number_classification/: .gitignore  classify_cnt.py  main.py  (+1 more)
(+325 files in other folders)
